Fixing button alignment

--- a/main-styles.css
+++ b/main-styles.css
@@ -18,6 +18,8 @@ body{
 
 .scroll-container{
     height: 100%;
+	position: absolute;
+	top: -20px;
 }	
 
 /*section layout*/
@@ -34,7 +36,13 @@ a {
 	padding-left: 20px;
 	padding-right: 20px;
     text-align: center;
-    top: 45%;
+    top: 50%;
+}
+
+.div-aligner{
+	width:100%;
+	display: flex;
+	justify-content: center;
 }
 
 section{ 
@@ -53,11 +61,9 @@ section a {
 .cta {
 	width: 100%;
     position: relative;
-    margin-left: auto;
-	margin-right: auto;
     padding: 19px 22px;
     transition: all 0.2s ease;
-    top:35%;
+    top:40%;
 }
 
 .cta:before {
